<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uldiniad.sportsman.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/GoogleMapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:onClick="onOpenInGoogleMaps"
            android:text="@string/open_in_google_maps"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="382dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout4">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="156dp"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/Logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/TeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/please_enter_a_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="171dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="215dp"
            android:id="@+id/linearLayout3"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/linearLayout2">

            <EditText
                android:id="@+id/TeamLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/please_enter_a_location"
                android:inputType="textPostalAddress"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="-43dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="58dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:onClick="OnSetAvatarButton"
            app:srcCompat="@drawable/ic_logo_00"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
